tests/NormalTests/paczka1/fuzzy1/53342235.err
Error in line 22: W5Xtl A286 38,2
Error in line 21: A286 S212 51,8
Error in line 32: cNzkD S631 8,9
Error in line 23: W5Xtl S212 70,2
Error in line 34: cNzkD A286 54,5
